# cuttlefish

./: .dir-locals.el  .gitignore  .projectile  CHANGELOG.md  Cuttlefish.sln  Cuttlefish.vcxproj  Cuttlefish.vcxproj.filters  Makefile.am  README.md  boost-bootstrap.sh  boost-build.sh  boost-custom-build.sh  configure.ac  configure.sh  std.h  std.hpp
data/: cube.blend  cube.dae  cube.ply  pillar.blend  pillar.blend1  pillar.dae
data/xml/: collada_schema_1_4.xml  collada_schema_1_4.xsd
include/: Exception.hpp  Game.hpp  OSGraphics.hpp  Resource.hpp  TypeAlias.hpp  exception.h  game.h  log.h  mesh.h  renderer-opengl.h  renderer.h  resource-collada.h  resource-xml.h  resource.h  resource.hpp  scene.h  string_utils.h  types.h  window.h
include/asset/: collada.h  resource.h  shader-opengl.h  shader.h
include/opengl/: driver.h
include/rapidxml/: rapidxml_print.hpp
libs/: README
libs/include/SDL2/: SDL_config.h
libs/lib/cmake/SDL2/: sdl2-config.cmake
libs/lib/pkgconfig/: sdl2.pc
m4-project/: ax_precompiled_headers.m4
src/: Exception.cpp  Game.cpp  Makefile.am  OSGraphics.cpp  Resource.cpp  connection.cpp  connection.hpp  exception.cc  game.cc  log.cc  main.cc  main.cpp  mesh.cc  renderer-opengl.cc  renderer.cc  resource-collada.cc  resource-xml.cc  resource.cc  scene.cc  server.cpp  server.hpp  std.h  std.hpp  window.cc
src/asset/: collada.cc  resource.cc  shader-opengl.cc  shader.cc
src/opengl/: driver.cc
src/tests/: boost_string_view.cc  tests.cc  tests.h
